crates/pardosa-schema/tests/compile_fail/hashmap_in_enum.rs
use pardosa_schema::GenomeSafe;
use std::collections::HashMap;
#[derive(GenomeSafe)]
enum Bad {
    Variant { data: HashMap<String, u32> },
}
fn main() {}
